[gd_scene format=3 uid="uid://c1f73ce5sd3bl"]

[ext_resource type="Script" uid="uid://ddjl1pstf0k4n" path="res://scripts/keepable_object.gd" id="1_6racp"]
[ext_resource type="Shader" uid="uid://bgdcjagv3pmhn" path="res://assets/keepable_object.gdshader" id="2_kpen4"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6racp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_67jrt"]

[sub_resource type="BoxMesh" id="BoxMesh_kpen4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kpen4"]
render_priority = 0
shader = ExtResource("2_kpen4")
shader_parameter/border_width = 0.05600000266
shader_parameter/color = Color(0, 0.5231276, 0.9935867, 1)
shader_parameter/pattern = false
shader_parameter/line_number = 0.0
shader_parameter/line_sharpness = 0.0
shader_parameter/pulse = false
shader_parameter/pulse_speed = 0.0
shader_parameter/line_movement = false
shader_parameter/line_movement_speed = 0.0
shader_parameter/wave = false

[sub_resource type="BoxMesh" id="BoxMesh_gek0b"]

[node name="KeepableObject" type="RigidBody3D" unique_id=1632434312]
script = ExtResource("1_6racp")
metadata/_custom_type_script = "uid://ddjl1pstf0k4n"

[node name="Area3D" type="Area3D" parent="." unique_id=119689344]
visible = false
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D" unique_id=1743644765]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, 0, 0, 0)
shape = SubResource("BoxShape3D_6racp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1320540621]
shape = SubResource("BoxShape3D_67jrt")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=2037998705]
mesh = SubResource("BoxMesh_kpen4")
skeleton = NodePath("OutLiner")

[node name="OutLiner" type="MeshInstance3D" parent="MeshInstance3D" unique_id=1969475511]
visible = false
material_overlay = SubResource("ShaderMaterial_kpen4")
mesh = SubResource("BoxMesh_gek0b")
skeleton = NodePath("../..")

[connection signal="body_entered" from="Area3D" to="." method="body_entered"]
[connection signal="body_exited" from="Area3D" to="." method="body_exited"]
